--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: masked_text_input_formatter
 description: Package that provides text formatting for TextField and TextFormField.
 version: 0.0.1
-author: Sebastian Arriola
+author: Sebastian Arriola <sebdeveloper6952@gmail.com>
 homepage: https://github.com/sebdeveloper6952/FlutterMaskedTextInputFormatter
 
 environment:
