--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ author: Sebastian Arriola <sebdeveloper6952@gmail.com>
 homepage: https://github.com/sebdeveloper6952/FlutterMaskedTextInputFormatter
 
 environment:
-  sdk: ">=2.0.0-dev.35 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
